--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         experts like Laitkor, MarkitMaven embarked on a journey to revolutionize its operations through strategic
         automation.</p>
     <h3>The MarkitMaven Success Story</h3>
-    <p>MarkitMaven's success story serves as a beacon of inspiration for any business seeking to harness the power of
+    <p><a href="https://www.laitkor.com/blog/revolutionizing-online-stores-a-dive-into-workforce-automation-with-markitmaven">MarkitMaven's success story</a> serves as a beacon of inspiration for any business seeking to harness the power of
         automation. By leveraging cutting-edge tools such as n8n.io, WooCommerce, and Python, we streamlined order
         processing, inventory management, and customer communication, creating a seamless and efficient e-commerce
         experience for their customers.</p>
@@ -52,7 +52,7 @@
         deliver exceptional customer experiences. As the digital landscape continues to evolve & expand, those who
         embrace automation will emerge as industry leaders, paving the way for a future defined by innovation and
         excellence.</p>
-    <p>As you explore workflow automation's possibilities for your business, consider MarkitMaven's success story with
+    <p>As you explore workflow automation's possibilities for your business, consider <a href="https://www.laitkor.com/blog/revolutionizing-online-stores-a-dive-into-workforce-automation-with-markitmaven">MarkitMaven's success story</a> with
         Laitkor and how strategic automation can propel your operations to new heights.</p>
 </body>
 
